sourcemash/frontend/static/scss/sourcemash.scss
@import "vendor/materialize/components/color";
@import "vendor/materialize/components/prefixer";


/*
 *******************************
 General Styles
 *******************************
 */
.truncate {
  width: 250px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.hide {
  display: none !important;
}

.preloader-wrapper:not(.hide) {
  margin: 10px 0;
}

.page-footer {
  @extend .red.darken-2;
  a {
    @extend .grey-text.text-lighten-3;
    &:hover {
      font-weight: 500;
    }
  }
}

/*
 *******************************
 Splash
 *******************************
 */

#splash {
  #splash-banner {
    @extend .grey.lighten-5;
  }

  #splash-logo {
    width: 85%;
  }

  #splash-divider {
    @extend .red.darken-2;
    height: 50px;
  }

  #splash-subtitle {
    @extend .red-text.text-darken-2;
  }

  #splash-info {
    a {
      @extend .red-text.text-darken-2;
      &:hover {
        font-weight: 400;
      }
    }
  }

  .promo-icon {
    @extend .red-text.text-darken-2;
    font-size: 7rem;
    display: block;
    padding-top: 10px;
  }

  .promo-caption {
    font-size: 1.7rem;
  }
}

/*
 *******************************
 Side Navigation Bar
 *******************************
 */

.top-nav {
  @extend .grey.lighten-5;
  box-shadow: None;
  height: 83.33px;

  #feedback-survey {
    padding-top: 20px;
    .btn {
      @extend .red.darken-2;
      font-weight: 400;
    }
  }
}

.container {
  @media only screen and (min-width: 993px) {
    width: 85%;
  }
}

header, main {
  padding-left: 360px;

  @media only screen and (max-width: 992px) {
    padding-left: 0;
  }
}

div.side-nav {
  position: fixed;
  width: 360px;
  top: 0;
  left: -105%;
  height: 100%;
  height: calc(100% + 60px);
  background-color: #FFF;
  z-index: 999;
  will-change: left;

  @include box-shadow(0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12));

  &.fixed {
    left: 0;
    position: fixed;
    overflow-y: scroll;
    height: 100%;

    @media only screen and (max-width: 992px) {
      left: -105%;
    }

    li {

      &.collection-item:hover {
        background-color: #ddd;
      }

      &.logo {
        text-align: center;
        border-bottom: 1px solid #ddd;

        img {
          height: 76px;
          padding: 6px 0;
        }
      }
    }
  }
}

.side-nav .collection a .collection-item {
  @extend .black-text;

  &:hover {
    background-color: inherit;
  }
}

.lists .collection {
  max-height: 300px;
  overflow-y: scroll;

  .new {
    @extend .red.darken-2
  }
}

.tabs {
  .indicator {
   @extend .red.darken-2
  }

  li.tab a {
    @extend .red-text.text-darken-2
  }
}

.sidenav-element {
  margin: 0;
}

.user-auth {
  position: absolute;
  bottom: 0;
  width: 100%;
}

a.button-collapse.top-nav.full {
  line-height: 64px;
}
a.button-collapse.top-nav {
  position: absolute;
  left: 7.5%;
  top: 0;
  float: none;
  margin-left: 1.5rem;
  color: black;
  font-size: 32px;
  z-index: 2;
}

.nav-wrapper {
  @media only screen and (max-width: 992px) {
    text-align: center;
  }
}

#forgot-password, #need-account {
  &:hover {
    cursor: pointer;
  }
}

/*
 *******************************
 Typeahead dropdown menu search
 *******************************
 */
.dropdown-menu {
  position: absolute;
  @extend .white;
  margin: 0;
  min-width: 100px;
  z-index: 1000;
  overflow-y: hidden;

  li {
    cursor: pointer;
    font-size: 1.2rem;
    line-height: 1.5rem;
    border: 1px solid black;

    &:hover {
      background-color: rgba(0,0,0, .06);
    }

    & > a,& > span {
      display: block;
      padding: 1rem 1rem;
    }
  }
}

/*
 *******************************
 Browse
 *******************************
 */

.topic-divider {
  @extend .red.darken-2;
  @extend .white-text;
  font-weight: 300;
  height: 50px;
}

.browse-feeds {
  padding: 10px;
  a {
    @extend .red-text.text-darken-2;
    &:hover {
      font-weight: 500;
    }
  }
}

.contents-header {
  padding-top: 10px;
}

/*
 ******************************
 * Feed & Category Item Styles
 ******************************
 */
.mark-all-read {
  @extend .grey-text.text-lighten-2;

  &:hover {
    @extend .black-text;
    cursor: pointer;
  }
}

.switch {
  label {
    padding: 10px;

    input[type=checkbox]:first-child:checked + .lever {
      @extend .red.darken-1;

      &:after {
        @extend .red;
      }
    }
  }
}

.modal-action {
	&:hover {
		background-color: #ddd;
	}
}

.card .card-image {
  max-width: 100%;
  margin: 0 auto;

  img[src*="sourcemash"] {
    opacity: .4;
}
}

.feed-card img {
  height: 50%;
}

.card {
    height: 400px;
    margin-bottom: 0px;

    @include box-shadow(0 0 5px 0 rgba(0, 0, 0, 0.16), 0 0 10px 0 rgba(0, 0, 0, 0.12));

    a {
      @extend .red-text.text-darken-2;
    }

    .card-content {
        @extend .white;
        z-index: 1;
        bottom: 0;
        position: absolute;

        width: 100%;
        .card-title {
            line-height: 32px;
            font-size: 20px;
        }
    }
    &.read {
	    .card-image {
        opacity: 0.3;
      }
    }
    .card-reveal {
      z-index: 2;
      overflow-y: scroll;
      img:nth-of-type(1) {
          width: 100%;
          height: auto;
      }
    }

    .card-action {
      .description {
        max-height: 100px;
        white-space: normal;
        overflow-y: scroll;
      }
    }
    #reveal-button {
        font-size: 1.75rem;
    }
    .activator {
        cursor: pointer;
    }
}

.item-card {
  .card-action {
    @extend .grey-text;

    padding: 10px;
    padding-left: 0;
    border: 1px solid rgba(160,160,160,.2);
    width: 100%;

    &.row {
      margin: 0 auto;
      margin-bottom: 10px;
    }

    .category-list {
      a {
        @extend .grey-text;

        &:hover {
          @extend .red-text.text-darken-2;
          font-weight: 400;
        }

        &:after {
          content: ", ";
        }

        &:last-child:after {
          content: "";
        }
      }
    }

    .saved {
      @extend .red-text.text-darken-2;

      &:hover {
        cursor: pointer;
      }
    }
  }
}


/*
 ******************************
 * Upvote-downvote colors
 ******************************
 */
.vote {
	@extend .grey-text.text-lighten-2;
	line-height: 10px;
	i {
		vertical-align: middle;
	}

  &:hover {
    cursor: pointer;
  }
}

.upvote {
	@extend .vote;
	&:hover, &.active {
		@extend .green-text.text-lighten-1;
	}
}

.downvote {
	@extend .vote;
	&:hover, &.active {
		@extend .red-text.text-lighten-1;
	}
}

/*
 ******************************
 * Forms
 ******************************
 */

form {
  padding: 10px;
}

.btn {
  @extend .blue.darken-3;
}

